--- a/src/CustomVisuals/Published/RotatingChart/tsconfig.json
+++ b/src/CustomVisuals/Published/RotatingChart/tsconfig.json
@@ -10,16 +10,12 @@
     "declaration": true
   },
   "files": [
-    "typings/index.d.ts",
-    ".api/v2.1.0/PowerBI-visuals.d.ts",
-    "src/tooltipServiceWrapper.ts",
-    "src/barChart.ts",
-    "src/objectEnumerationUtility.ts",
-    "src/localization/localizationHelper.ts",
-    "src/localization/localizedResources.ts",
+    ".api/v2.5.0/PowerBI-visuals.d.ts",
+    "src/rotatingChart.ts",
     "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts"
+    "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts"
   ]
 }
